# fulqrum

./: .clang-format  .gitignore  .gitmodules  .pylintrc  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  Untitled.ipynb  cpp-tests.sh  offdiag_grouping.hpp  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  travis.yml
.github/workflows/: conda-testing.yml  docs-dev.yml
benchmarks/: README.md  __init__.py  benchmark_h2o.py  benchmark_heisenberg.py  config.py  conftest.py  default.conf
benchmarks/test/: test_ch4_dimer_1e6.py  test_h2o_full.py  test_jw.py
benchmarks/tests/: test_h2o_full.py
dev/: .buildinfo  citing.html  fermi_operators.html  fermi_operators.ipynb  genindex.html  index.html  install.html  objects.inv  operator_io.html  operator_io.ipynb  py-modindex.html  qubit_operators.html  qubit_operators.ipynb  search.html  searchindex.js  started.html  subspace_hamiltonians.html  subspace_hamiltonians.ipynb  subspaces.html  subspaces.ipynb
dev/_modules/: index.html
dev/_sources/: citing.rst.txt  fermi_operators.ipynb.txt  index.rst.txt  install.rst.txt  operator_io.ipynb.txt  qubit_operators.ipynb.txt  started.rst.txt  subspace_hamiltonians.ipynb.txt  subspaces.ipynb.txt
dev/_static/: custom.css
dev/apidocs/: core.html  ramps.html  utils.html
docs/: Makefile  api.rst  citing.rst  conf.py  fermi_operators.ipynb  how_it_works.rst  index.rst  install.rst  operator_io.ipynb  qubit_operators.ipynb  qubit_operators.rst  started.rst  subspaces.ipynb
fulqrum/: __init__.py  exceptions.py
fulqrum_tophat/: __init__.py  exceptions.py
qiskit_addon_fulqrum/: __init__.py
test/: test_diag.cpp  test_fermi.cpp  test_grouping.cpp  test_jw.cpp  test_ladder.cpp  test_qubit_operator.cpp  test_qubit_operator_offdiag.cpp
tutorials/: README.md  heisenberg_spin_model.ipynb  n2_full_sqd_loop.ipynb
(+275 files in other folders)
